--- a/Soccer_Matching/src/main/webapp/css/soccer-style.css
+++ b/Soccer_Matching/src/main/webapp/css/soccer-style.css
@@ -138,6 +138,10 @@ ul {
     margin-left: 110px;
 }
 
+#sidebar .contents:hover{
+	cursor:pointer;
+}
+
 footer {
     height: 8vh;
     width: 100%;
